# facturation_electronique

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  __init__.py  codecov.yaml  config.py  exceptions.py  models.py  pip_compile.sh  pyproject.toml  readme.md  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.py  template_config.py
.github/workflows/: ci-tests.yml  docs.yml
api/: chorus_pro.py  dgpf.py  pannylane.py  sage.py
docs/: Makefile  make.bat
docs/source/: conf.py  exemples.rst  index.rst
docs/source/api/: chorus_pro.rst  exceptions.rst  index.rst  models.rst  utils.rst
docs/source/guide/: 01_prise_en_main.rst  02_interagir_avec_chorus_pro.rst  03_creer_facture_api.rst  04_creer_facture_facturx.rst  05_signer_un_pdf.rst  06_envoyer_facture_pdf.rst  index.rst
facture_electronique/: .env.exemple  __init__.py  constructeur.py  exceptions.py  models.py  template_config.py
facture_electronique/api/: chorus_pro.py  pannylane.py  sage.py
facture_electronique/exemples/: exemple.py  exemple_decoupe.py
facture_electronique/utils/: datetime_utils.py  facturx.py  files.py  http_client.py  pdfs.py  strings_and_dicts.py
facture_electronique/xsd/facturx-basic/: Factur-X_1.0.07_BASIC.xsd:Zone.Identifier
tests/: test_chorus_pro_api.py  test_exemples.py  test_facturx.py  test_models.py  test_strings_and_dicts.py
utils/: datetime_utils.py  facturx.py  http_client.py  pdfs.py
