[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "facture_electronique"
version = "0.3.0"
description = "Facturation Electronique SDK est une bibliothèque Python qui simplifie l'interaction avec les principales API de facturation électronique en France, notamment **Chorus Pro**, et d'autres partenaires privés. Elle supporte également le format Factur-X pour la création et l'envoi de factures électroniques."
readme = { file = "readme.md", content-type = "text/markdown" }
authors = [{ name = "Thierry Martin", email = "thierry.martin.2008@gadz.org" }]
license = { text = "MIT" }
keywords = ["chorus pro", "choruspro", "facturx", "factur-x", "facture électronique"]
classifiers = [
	"Development Status :: 3 - Alpha",
	"Programming Language :: Python :: 3",
	"Intended Audience :: Developers",
	"Operating System :: OS Independent",
	"Topic :: Office/Business :: Financial :: Accounting",
	"License :: OSI Approved :: MIT License"
]
requires-python = ">=3.10"
dependencies = [
	"requests>=2.32.3",
	"pydantic>=2.9.2"
]

[project.urls]
"Homepage" = "https://github.com/thierryjmartin/facturation_electronique"
"Source Code" = "https://github.com/thierryjmartin/facturation_electronique"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
