[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "facture_electronique"
version = "0.5.2"
description = "Facturation Electronique SDK est une bibliothèque Python qui simplifie l'interaction avec les principales API de facturation électronique en France, notamment **Chorus Pro**, et d'autres partenaires privés. Elle supporte également le format Factur-X pour la création et l'envoi de factures électroniques."
readme = { file = "readme.md", content-type = "text/markdown" }
authors = [{ name = "Thierry Martin", email = "thierry.martin.2008@gadz.org" }]
license = { text = "MIT" }
keywords = ["chorus pro", "choruspro", "facturx", "factur-x", "facture électronique"]
classifiers = [
	"Development Status :: 3 - Alpha",
	"Programming Language :: Python :: 3",
	"Intended Audience :: Developers",
	"Operating System :: OS Independent",
	"Topic :: Office/Business :: Financial :: Accounting",
	"License :: OSI Approved :: MIT License"
]
requires-python = ">=3.10"
dependencies = [
	# Requête HTTP et gestion des API
    "requests>=2.32.3",

    # Outils de validation et de manipulation des données
	"pydantic>=2.9.2",

    # Gestion du format Factur-X
    "factur-x>=3.4",

    # générer les pdf/a pour Factur-X
    "ghostscript>=0.7",

    # pour generer les Factur-X depuis les objets Pydantic Facture
    "xsdata>=24.9",

    # pour valider les Factur-X avec xldt
    "saxonche>=12.5.0",

    # pour ajouter des tampons aux PDFs
    "pyHanko[pkcs11,image-support,opentype]>=0.25.3"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]
dev = [
    "ruff",
    "pre-commit",
    "pip-tools",
    "facture-electronique[test]"
]

[project.urls]
"Homepage" = "https://github.com/thierryjmartin/facturation_electronique"
"Source Code" = "https://github.com/thierryjmartin/facturation_electronique"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
